# prophecies

./: .bumpversion.cfg  .dockerignore  .editorconfig  .gitignore  .yarnrc  Dockerfile  Makefile  Pipfile  README.md  crowdin.yml  docker-compose.yml  manage.py  pylintrc  pyproject.toml
.circleci/: config.yml
.github/workflows/: main.yml  node_task.yml  python_task.yml  python_tasks.yml
prophecies/: __init__.py  asgi.py  urls.py  wsgi.py
prophecies/apps/: __init__.py
prophecies/apps/api/: filters.py  urls.py
prophecies/apps/api/contrib/: strings.py
prophecies/apps/api/fixtures/: settings.json  users.json
prophecies/apps/api/models/: setting.py
prophecies/apps/api/tests/: test_setting.py  test_user.py
prophecies/apps/api/views/: action.py  action_aggregate.py  action_aggregation.py  alternative_value.py  choice.py  choice_group.py  notification.py  operation.py  project.py  setting.py  task.py  task_choice.py  task_choices_group.py  task_record.py  task_record_attribution.py  task_record_media.py  task_record_review.py  task_record_review_aggregate.py  task_template_settings.py  task_user_choice_statistics.py  task_user_statistics.py  tip.py  (+2 more)
prophecies/apps/frontend/: README.md  package.json  vue.config.js
prophecies/core/: __init__.py  admin.py  filters.py  forms.py  managers.py  mixins.py  oauth2_provider.py  xemx.py
prophecies/core/admin/: __init__.py  alternative_value_admin.py  choice_group_admin.py  filters.py  project_admin.py  setting_admin.py  task_admin.py  task_record_admin.py  task_record_media_admin.py  task_record_review_admin.py  task_template_setting_admin.py  tip_admin.py
prophecies/core/context_processors/: __init__.py
prophecies/core/contrib/: colors.py  display.py  formatter.py  mentions.py  namespace.py  variant.py
prophecies/core/forms/: __init__.py  abstract_upload_form.py  alternative_value_upload_form.py  setting_form.py  task_form.py  task_record_assign_form.py  task_record_attribute_form.py  task_record_attribution_form.py  task_record_changelist_form.py  task_record_media_upload_form.py  task_record_review_changelist_form.py  task_record_upload_form.py
prophecies/core/migrations/: 0001_initial.py  0002_alter_taskchoice_choices_group.py  0002_taskrecord.py  0002_taskrecord_priority.py  0003_alter_taskrecord_uid.py  0003_auto_20210726_1913.py  0003_auto_20210813_1117.py  0004_alter_task_project.py  0004_taskrecordattribution.py  0004_tip.py  0005_auto_20210730_0952.py  0005_auto_20210830_1535.py  0005_notification.py  0006_auto_20210731_1020.py  0006_merge_0005_auto_20210830_1535_0005_notification.py  0007_alter_taskchecker_unique_together.py  0007_rename_notification_usernotification.py  0008_auto_20210802_1441.py  0008_auto_20210907_1216.py  0009_auto_20210804_0932.py  0009_task_status.py  0010_auto_20211001_0921.py  0010_choice_require_alternative_value.py  0011_alternativevalue.py  0011_auto_20211104_1712.py  0012_actionaggregate.py  0012_actionaggregation.py  0012_alter_taskrecordreview_alternative_value.py  0013_alter_taskrecordreview_choice.py  0013_auto_20220110_1303.py  0013_auto_20220114_1130.py  0013_rename_actionaggregation_actionaggregate.py  0013_taskrecord_saved_by.py  0014_alter_taskrecordreview_note.py  0014_rename_recordlinktemplate_task_record_link_template.py  0015_choice_shortkeys.py  0015_task_embeddable_links.py  0015_taskrecord_saved_by.py  0016_alter_choice_shortkeys.py  0016_auto_20220113_1625.py  (+17 more)
prophecies/core/models/: __init__.py  action_aggregate.py  action_aggregation.py  alternative_value.py  choice.py  choice_group.py  notification.py  project.py  setting.py  task.py  task_checker.py  task_choice.py  task_choices_group.py  task_record.py  task_record_attribution.py  task_record_media.py  task_record_review.py  task_template_setting.py  task_user_choice_statistics.py  task_user_statistics.py  tip.py  user_notification.py
prophecies/core/storages/: __init__.py  s3_media_storage.py
prophecies/core/tests/: test_forms.py
prophecies/core/validators/: task_record_media.py
prophecies/settings/: __init__.py  base.py  production.py  test.py
prophecies/static/docs/: api.html
(+332 files in other folders)
