[tool.poetry]
name = "prophecies"
version = "0.5.9"
authors = ['ICIJ <engineering@icij.org>']
description = "An ICIJ app to conduct data validation and cleaning"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "==4.2.9"
djangorestframework = "^3.14"
django-cors-headers = "*"
django-debug-toolbar = "*"
django-environ = "*"
social-auth-app-django = "*"
django-webpack-loader = "*"
psycopg2-binary = "*"
gunicorn = "*"
pillow = "*"
django-colorfield = "*"
django-constance = {extras = [ "database",], version = "2.9.1"}
django-filter = "*"
django-crispy-forms = "*"
djangorestframework-jsonapi = {extras = ["django-polymorphic"], version = "^6.1.0"}
django-activity-stream = "^1.4"
django-jsonfield = "*"
markdown = "*"
django-admin-autocomplete-filter = "*"
django-import-export = "2.7.1"
setuptools = "^69.0.3"
python-magic = "^0.4.27"
django-polymorphic = "^3.1.0"
django-rest-polymorphic = "^0.1.10"
boto3 = "^1.34.21"
django-storages = {extras = ["s3"], version = "^1.14.2"}
django-cachalot = "^2.6.2"
django-structlog = "^7.1.0"
drf-spectacular = "^0.27.1"

[tool.poetry.group.dev.dependencies]
time-machine = "*"
pytest-django = "*"
pylint = "^2.17.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
