[tool.poetry]
name = "prophecies"
version = "0.5.15"
authors = ['ICIJ <engineering@icij.org>']
description = "An ICIJ app to conduct data validation and cleaning"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"
django-debug-toolbar = "^4.3.0"
django-environ = "^0.11.2"
social-auth-app-django = "^5.4.0"
django-webpack-loader = "^3.0.1"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
pillow = "^10.2.0"
django-colorfield = "^0.11.0"
django-constance = {extras = [ "database",], version = "2.9.1"}
django-filter = "^23.5"
django-crispy-forms = "^2.1"
djangorestframework-jsonapi = {extras = ["django-polymorphic"], version = "^6.1.0"}
django-activity-stream = "^2.0.0"
django-jsonfield = "^1.4.1"
markdown = "^3.5.2"
django-admin-autocomplete-filter = "^0.7.1"
django-import-export = "2.7.1"
setuptools = "^69.1.0"
python-magic = "^0.4.27"
django-polymorphic = "^3.1.0"
django-rest-polymorphic = "^0.1.10"
boto3 = "^1.34.39"
django-storages = {extras = ["s3"], version = "^1.14.2"}
django-cachalot = "^2.6.2"
django-structlog = "^7.1.0"
drf-spectacular = "^0.27.1"

[tool.poetry.group.dev.dependencies]
time-machine = "^2.13.0"
pytest-django = "^4.8.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
