[tool.poetry]
name = "prophecies"
version = "0.5.20"
authors = ['ICIJ <engineering@icij.org>']
description = "An ICIJ app to conduct data validation and cleaning"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.5"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
django-debug-toolbar = "^5.0.1"
django-environ = "^0.12.0"
social-auth-app-django = "^5.4.2"
django-webpack-loader = "^3.1.1"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"
pillow = "^11.1.0"
django-colorfield = "^0.12.0"
django-constance = {extras = [ "database",], version = "2.9.1"}
django-filter = "^24.3"
django-crispy-forms = "^2.3"
djangorestframework-jsonapi = {extras = ["django-polymorphic"], version = "^7.1.0"}
django-activity-stream = "^2.0.0"
django-jsonfield = "^1.4.1"
markdown = "^3.7"
django-admin-autocomplete-filter = "^0.7.1"
django-import-export = "2.7.1"
setuptools = "^75.8.0"
python-magic = "^0.4.27"
django-polymorphic = "^3.1.0"
django-rest-polymorphic = "^0.1.10"
boto3 = "^1.36.7"
django-storages = {extras = ["s3"], version = "^1.14.4"}
django-cachalot = "^2.7.0"
django-structlog = "^9.0.0"
drf-spectacular = "^0.28.0"

[tool.poetry.group.dev.dependencies]
time-machine = "^2.16.0"
pytest-django = "^4.9.0"
pylint = "^3.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
